--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web",
-  "homepage": "https://fierajhaer.github.io/administrador-tesinas-web/",
-  "private": true,
+  "homepage": "./",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
