--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "homepage": "./",
+  "homepage": "https://fierajhaer.github.io/administrador-tesinas-prueba/",
   "private": false,
   "version": "0.0.0",
   "type": "module",
